# LiTE_pytorch

./: README.md  model.pth  pyproject.toml  requirements.txt  setup.py  train.py
src/: lite.py
src/layers/: fcn_module.py  hybrid_layer.py  inception.py
utils/: trainer.py  utils.py
